[workspace]
members = [
    "eth_test_parser",
    "evm_test_runner",
    "common",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
repository = "https://github.com/0xPolygonZero/evm-tests"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky2"]
categories = ["cryptography"]

[workspace.dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = {version = "4.2.7", features = ["derive"] }
ethereum-types = "0.14.1"
flexi_logger = { version = "0.25.4", features = ["async"] }
futures = "0.3.28"
keccak-hash = "0.10.0"
log = "0.4.17"
serde = "1.0.163"
serde_cbor = "0.11.2"
tokio = { version = "1.28.1" }

# zk-evm dependencies
plonky2 = "0.2.2"
mpt_trie = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "feat/type2" }
smt_trie = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "feat/type2" }
evm_arithmetization = { git = "https://github.com/0xPolygonZero/zk_evm", branch = "feat/type2" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
