[package]
name = "common"
description = "Common logic shared between the parser and the runner."
version = "0.1.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
ethereum-types = "0.14.1"
eth_trie_utils = { git = "https://github.com/0xPolygonZero/eth_trie_utils.git", rev = "7fc3c3f54b3cec9c6fc5ffc5230910bd1cb77f76" }
flexi_logger = { version = "0.25.4", features = ["async"] }
plonky2_evm = { git = "https://github.com/0xPolygonZero/plonky2.git", branch = "type2/hermez" }
#plonky2_evm = { path = "../../plonky2/evm" }
serde = {version = "1.0.163", features = ["derive"] }
