[package]
name = "common"
description = "Common logic shared between the parser and the runner."
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ethereum-types = { workspace = true }
mpt_trie = { workspace = true }
flexi_logger = { workspace = true }
evm_arithmetization = { workspace = true }
plonky2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
