[package]
name = "eth_test_parser"
description = "Downloads and parses common Ethereum tests into a format runnable by Polygon Zero's EVM."
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
mpt_trie = { workspace = true }
evm_arithmetization = { workspace = true }

anyhow = { workspace = true }
bytes = "1.4.0"
clap = { workspace = true }
ethereum-types = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
keccak-hash = { workspace = true }
log = { workspace = true }
rlp = "0.5.2"
rlp-derive = "0.1.0"
serde = { workspace = true }
serde_json = "1.0.96"
serde_with = "3.0.0"
serde_cbor = { workspace = true }
tokio = { workspace = true, features = ["full"] }
