[package]
name = "eth_test_parser"
description = "Downloads and parses common Ethereum tests into a format runnable by Polygon Zero's EVM."
version = "0.1.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
smt_trie = { workspace = true }
mpt_trie = { workspace = true }
evm_arithmetization = { workspace = true }

anyhow = { version = "1.0.71", features = ["backtrace"] }
bytes = "1.4.0"
clap = {version = "4.2.7", features = ["derive"] }
ethereum-types = "0.14.1"
hex = { version = "0.4.3", features = ["serde"] }
flexi_logger = { version = "0.25.4", features = ["async"] }
keccak-hash = "0.10.0"
log = "0.4.17"
rlp = "0.5.2"
rlp-derive = "0.1.0"
serde = "1.0.163"
serde_json = "1.0.96"
serde_with = "3.0.0"
serde_cbor = "0.11.2"
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"
