[package]
name = "evm_test_runner"
description = "Test runner for Polygon Zero's EVM."
version = "0.1.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
plonky2 = "0.1.3"
plonky2_evm = { git = "https://github.com/mir-protocol/plonky2.git", rev = "b667c07497d5343e5d239a5980debf6401ac775f" }

anyhow = { version = "1.0", features = ["backtrace"] }
askama = "0.11.1"
clap = {version = "4.1.8", features = ["derive"] }
ethereum-types = "0.14.0"
flexi_logger = { version = "0.25.1", features = ["async"] }
indicatif = "0.17.1"
log = "0.4.17"
serde_cbor = "0.11.2"
termimad = "0.20.3"
tokio = {version = "1.21.2", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = {version  = "0.1.11", features = ["fs"] }
revm = "3.0.0"
similar = { version = "2.2.1", features = ["inline"] }
ruint = { version = "1.7.0", features = ["primitive-types"] }
keccak-hash = "0.10.0"
console = "0.15.5"
