[package]
name = "evm_test_runner"
description = "Test runner for Polygon Zero's EVM."
version = "0.1.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", rev = "51eb7c0b5221e6fce5a39beac6a9ba274b2d71b3" }
plonky2_evm = { git = "https://github.com/mir-protocol/plonky2.git", rev = "51eb7c0b5221e6fce5a39beac6a9ba274b2d71b3" }

anyhow = { version = "1.0", features = ["backtrace"] }
askama = "0.12.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = {version = "4.2.7", features = ["derive"] }
csv = "1.2.1"
ctrlc = "3.2.5"
ethereum-types = "0.14.1"
flexi_logger = { version = "0.25.4", features = ["async"] }
futures = "0.3"
humantime = "2.1.0"
indicatif = "0.17.3"
log = "0.4.17"
serde = "1.0.163"
serde_cbor = "0.11.2"
termimad = "0.23.0"
tokio = {version = "1.28.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = {version  = "0.1.14", features = ["fs"] }
similar = { version = "2.2.1", features = ["inline"] }
keccak-hash = "0.10.0"
console = "0.15.6"
