[package]
name = "evm_test_runner"
description = "Test runner for Polygon Zero's EVM."
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
plonky2 = { workspace = true }
plonky2_evm = { workspace = true }

anyhow = { workspace = true }
askama = "0.12.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { workspace = true }
console = "0.15.6"
csv = "1.2.1"
ctrlc = "3.2.5"
ethereum-types = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
humantime = "2.1.0"
indicatif = "0.17.3"
keccak-hash = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
similar = { version = "2.2.1", features = ["inline"] }
termimad = "0.23.0"
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = {version  = "0.1.14", features = ["fs"] }
